Fixing hero banner on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -220,12 +220,12 @@ section {
 
 .stat {
     background-color: #ffffff;
-    display: flex;    
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 0.5rem;
-    text-align: center;    
+    text-align: center;
     font-weight: 600;
     font-size: 18px;
     gap: 0.5rem;
@@ -271,11 +271,11 @@ section {
 }
 
 footer {
-    padding: 2rem;    
+    padding: 2rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;  
+    align-items: center;
     background-image: linear-gradient(rgba(35, 31, 32, 1), rgba(35, 31, 32, 1)) !important;
     background-position: left top !important;
     background-size: auto !important;
@@ -289,6 +289,10 @@ footer img {
 }
 
 @media(max-width:767px) {
+    #hero {
+        background-position: left center
+    }
+
     section {
         padding: 2rem 1rem;
     }
